--- a/Facebook/Extent-Report/ExtentReport.html
+++ b/Facebook/Extent-Report/ExtentReport.html
@@ -334,7 +334,7 @@ Session ID: a785c7708091e057f553872f262c0c70
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
 	at com.sun.proxy.$Proxy13.click(Unknown Source)
 	at com.facebook.pages.SendAFriendRequest.loginHomePage(SendAFriendRequest.java:32)
-	at com.facebook.loginpagetest.SendAFriendRequestTest.sendFriendReqTest(SendAFriendRequestTest.java:17)
+	at com.SendAFriendRequestTest.sendFriendReqTest(SendAFriendRequestTest.java:17)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
