--- a/Cnn/Extent-Report/ExtentReport.html
+++ b/Cnn/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-07-01 17:29:59</span>
+					<span class='suite-started-time'>2021-07-12 17:28:18</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 11s+933ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 20s+134ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 11s+933ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 20s+134ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-07-01 17:29:48</span> 
+							<span class='panel-lead suite-started-time'>2021-07-12 17:27:58</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-07-01 17:29:59</span> 
+							<span class='panel-lead suite-ended-time'>2021-07-12 17:28:18</span> 
 						</div> 
 					</div>
 				</div>
@@ -212,6 +212,11 @@
 													LoginTest
 												</td>
 											</tr>
+											<tr>
+												<td>
+													PoliticesLinkTest
+												</td>
+											</tr>
 									</tbody>
 								</table>
 							</div>
@@ -246,6 +251,7 @@
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
 											<li class='LoginTest'><a href='#!'>LoginTest</a></li>
+											<li class='PoliticesLinkTest'><a href='#!'>PoliticesLinkTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -277,17 +283,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='627e076d-e833-47d5-8fd8-a5f5186e744c'>
+										<li class='collection-item test displayed active pass ' extentid='6961dddb-35bf-47d7-9faf-2e31439ebdff'>
 											<div class='test-head'>
-												<span class='test-name'>verifyLoginTest </span>
+												<span class='test-name'>validateUserCanLogin </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide  logintest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-01 17:29:58</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-01 17:29:59</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+796ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-12 17:28:07</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-12 17:28:08</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+698ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -307,12 +313,57 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:29:59</td>
+																	<td class='timestamp'>17:28:08</td>
 																	<td class='step-details'>User successfully log in account<br></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:29:59</td>
+																	<td class='timestamp'>17:28:08</td>
+																	<td class='step-details'>Test Passed</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='c5f61819-0d4f-4104-a3d4-f011fde3407b'>
+											<div class='test-head'>
+												<span class='test-name'>validateUserCanReadPoliticsNews </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide  politiceslinktest'></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-07-12 17:28:15</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-07-12 17:28:18</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 2s+829ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+														<div class='categories'>
+																<span class='category text-white'>PoliticesLinkTest</span>
+														</div>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>17:28:18</td>
+																	<td class='step-details'>Read news politics page<br></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>17:28:18</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -395,8 +446,43 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2021-07-01 17:29:58</td>
-																		<td><span class='category-link linked' extentid='627e076d-e833-47d5-8fd8-a5f5186e744c'>verifyLoginTest</span></td>
+																		<td>2021-07-12 17:28:07</td>
+																		<td><span class='category-link linked' extentid='6961dddb-35bf-47d7-9faf-2e31439ebdff'>validateUserCanLogin</span></td>
+																		<td><div class='status label capitalize pass'>pass</div></td>
+																	</tr>
+															<tbody>
+														</table>
+													</div>
+												</div> 
+											</li>
+											<li class='category-item displayed'>
+												<div class='cat-head'>
+													<span class='category-name'>PoliticesLinkTest</span>
+												</div>
+												<div class='category-status-counts'>
+														<span class='pass label dot'>Pass: 1</span>
+												</div>
+												<div class='cat-body'>
+													<div class='category-status-counts'>
+														<div class='button-group'>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
+															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
+															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
+														</div>
+													</div>
+													<div class='cat-tests'>
+														<table class='bordered'>
+															<thead>
+																<tr>
+																	<th>RunDate</th>
+																	<th>Test Name</th>
+																	<th>Status</th>
+																</tr>
+															</thead>
+															<tbody>
+																	<tr class='pass'>
+																		<td>2021-07-12 17:28:15</td>
+																		<td><span class='category-link linked' extentid='c5f61819-0d4f-4104-a3d4-f011fde3407b'>validateUserCanReadPoliticsNews</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
